--- a/pushService/base/pom.xml
+++ b/pushService/base/pom.xml
@@ -21,6 +21,11 @@
             <groupId>com.qcby</groupId>
             <artifactId>push-service-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.qcby</groupId>
+            <artifactId>qcby-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <!-- mybatis-plus -->
         <dependency>
@@ -44,6 +49,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>5.3.18</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
         </dependency>
     </dependencies>
 
