--- a/pushService/web/src/main/resources/application.yml
+++ b/pushService/web/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8089
+  port: 8080
   servlet:
     context-path: /personal-management
 
@@ -8,3 +8,6 @@ spring:
     name: personal-management
   profiles:
     active: local
+  mvc:
+    servlet:
+      load-on-startup: 1
