--- a/pushService/pom.xml
+++ b/pushService/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.qcby</groupId>
-    <artifactId>pushService</artifactId>
+    <artifactId>personService</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
@@ -24,8 +24,8 @@
         <mybatis-plus.version>3.4.2</mybatis-plus.version>
         <redisson.version>3.17.4</redisson.version>
         <redisson-start.version>3.17.4</redisson-start.version>
-        <push-service-base.version>1.0-SNAPSHOT</push-service-base.version>
-        <push-service-common.version>1.0-SNAPSHOT</push-service-common.version>
+        <person-service-base.version>1.0-SNAPSHOT</person-service-base.version>
+        <person-service-common.version>1.0-SNAPSHOT</person-service-common.version>
         <mysql-version>8.0.32</mysql-version>
         <easyexcel.version>3.3.2</easyexcel.version>
     </properties>
@@ -85,8 +85,8 @@
             </dependency>
             <dependency>
                 <groupId>com.qcby</groupId>
-                <artifactId>push-service-base</artifactId>
-                <version>${push-service-base.version}</version>
+                <artifactId>person-service-base</artifactId>
+                <version>${person-service-base.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.mysql</groupId>
@@ -95,8 +95,8 @@
             </dependency>
             <dependency>
                 <groupId>com.qcby</groupId>
-                <artifactId>push-service-common</artifactId>
-                <version>${push-service-common.version}</version>
+                <artifactId>person-service-common</artifactId>
+                <version>${person-service-common.version}</version>
             </dependency>
 
             <dependency>
